welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value len
  var n = len(nums)
          ^indexOfValue:7: error: not found: value retrun
      retrun -1
      ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
  for (rang <- 0 to (n-1)){
            ^