welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var n = len(nums)
  for (rang <- 0 to (n-1)){
    if (nums(rang)==lookingFor){
      return rang
    }else {
      retrun -1
    }
    }
  }
